--- a/html/index.html
+++ b/html/index.html
@@ -22,8 +22,9 @@
 	<link href="../assets/css/material-kit.css?v=2.0.7" rel="stylesheet" />
 
 	<!--스위퍼-->
-	<link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.css">
-
+	<!-- <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.css"> -->
+	<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
+	<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 
 
 	<!-- 내가만든 CSS-->
@@ -289,7 +290,9 @@
 
 
 	<!--스위퍼 CDN 스크립트-->
-	<script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+	<!-- <script src="https://unpkg.com/swiper/js/swiper.min.js"></script> -->
+	<script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+	<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
 	<!-- 드래그 앤 드랍 -->
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
